--- a/angular.json
+++ b/angular.json
@@ -113,8 +113,13 @@
               "devServerTarget": "letsTrip:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "letsTrip"
 }
