--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
         "@angular/common": "~8.0.1",
         "@angular/compiler": "~8.0.1",
         "@angular/core": "~8.0.1",
-        "@angular/fire": "^6.0.0-rc.2",
+        "@angular/fire": "^6.0.0",
         "@angular/forms": "~8.0.1",
         "@angular/platform-browser": "~8.0.1",
         "@angular/platform-browser-dynamic": "~8.0.1",
         "@angular/router": "~8.0.1",
+        "firebase": "^7.14.0",
         "rxjs": "~6.4.0",
         "tslib": "^1.9.0",
         "zone.js": "~0.9.1"
@@ -43,11 +44,6 @@
         "protractor": "~5.4.0",
         "ts-node": "~7.0.0",
         "tslint": "~5.15.0",
-        "typescript": "~3.4.3",
-        "@angular-devkit/architect": "~0.900",
-        "firebase-tools": "^7.12.1",
-        "fuzzy": "^0.1.3",
-        "inquirer": "^6.2.2",
-        "inquirer-autocomplete-prompt": "^1.0.1"
+        "typescript": "~3.4.3"
     }
 }
